tests/parser-test-files/bad-files/parse-for.5.error
error: Malformed for expression
  --> test:4:31
   |
 4 |  (define f (for :label x in iter))
   |                                 ^ expected body
